--- a/chrome-extension/main.html
+++ b/chrome-extension/main.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/png" href="benso.png">
     <title>Posta</title>
 </head>
 
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="exploit.js"></script></body>
+<script type="text/javascript" src="main.js"></script></body>
 
 </html>
